--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -22,7 +22,7 @@
     </div>
 
 
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/deparam.js"></script>
     <script src="/js/mustache.js"></script>
